# GraphNet

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_data_cleaning.ipynb  00_deduplicate.ipynb  01_baseline_model_features.ipynb  01_feature_engineering.ipynb  02_baseline_model_performance.ipynb  02_ridge_model.ipynb  02b_ridge_model_expanded_features.ipynb  03_boosting_model.ipynb  04_graph_features.ipynb  05_gin_model.ipynb  06_gat_model.ipynb  07_model_comparison.ipynb
