[project]
name = "chemnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "rdkit>=2026.3.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torch-geometric>=2.8.0",
    "xgboost>=3.2.0",
]
